--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -43,12 +43,12 @@
 # Automatic targets - enable auto-uploading
 # targets = upload
 
-[env:Arduino_Pro8MHzATmega328]
+[env:Arduino_Pro16MHzATmega328]
 platform = atmelavr
 framework = arduino
 board = pro8MHzatmega328
 
-[env:TI_MSP430G2553]
+[env:TI_LPmsp430g2553]
 platform = timsp430
 framework = energia
 board = lpmsp430g2553
