Add Arduino UNO env

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -43,10 +43,10 @@
 # Automatic targets - enable auto-uploading
 # targets = upload
 
-[env:Arduino_Pro16MHzATmega328]
+[env:Arduino_Uno]
 platform = atmelavr
 framework = arduino
-board = pro8MHzatmega328
+board = uno
 
 [env:TI_LPmsp430g2553]
 platform = timsp430
