Refactoring with platform HALs

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -43,17 +43,14 @@
 # Automatic targets - enable auto-uploading
 # targets = upload
 
-[env:Arduino_Uno]
+[env:uno]
 platform = atmelavr
 framework = arduino
 board = uno
+build_flags = -std=c99
 
-[env:TI_LPmsp430g2553]
+[env:msp430]
 platform = timsp430
 framework = energia
 board = lpmsp430g2553
-
-[env:TI_LM4F120]
-platform = titiva
-framework = energia
-board = lplm4f120h5qr
+build_flags = -std=c99
