--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
     - "2.7"
 
 env:
-    - SA_BASH_CMD="platformio --force run --project-dir=firmware"
+    - SA_BASH_CMD="platformio --force run --project-dir=firmware -e uno"
     - SA_BASH_CMD="cd tests/emulator && ./build-cs"
     - SA_BASH_CMD="cd tests/emulator && ./build-cu"
     - SA_BASH_CMD="cd tests/emulator && ./build-slv"
