Rename Arduino platform to Wiring

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -47,8 +47,12 @@
 platform = atmelavr
 framework = arduino
 board = uno
+src_filter = +<*> -<hal/platforms> +<hal/platforms/wiring>
+build_flags = -D SA_PLATFORM_WIRING
 
 [env:msp430]
 platform = timsp430
 framework = energia
 board = lpmsp430g2553
+src_filter = +<*> -<hal/platforms> +<hal/platforms/wiring>
+build_flags = -D SA_PLATFORM_WIRING
