--- a/.travis.yml
+++ b/.travis.yml
@@ -36,5 +36,8 @@ env:
 install:
     - python -c "$(curl -fsSL https://raw.githubusercontent.com/platformio/platformio/master/scripts/get-platformio.py)"
 
+    # @TODO temporary solution for < 2.2.0 release
+    - pip install https://github.com/platformio/platformio/archive/develop.zip
+
 script:
     - eval $SA_BASH_CMD
