Add "voidavr" build environment

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -56,3 +56,9 @@ framework = energia
 board = lpmsp430g2553
 src_filter = +<*> -<hal/platforms> +<hal/platforms/wiring>
 build_flags = -D SA_PLATFORM_WIRING
+
+[env:voidavr]
+platform = atmelavr
+board = uno
+src_filter = +<*> -<hal/platforms> +<hal/platforms/void>
+build_flags = -D SA_PLATFORM_VOID
