--- a/tox.ini
+++ b/tox.ini
@@ -33,7 +33,7 @@ deps =
     isort
     flake8
 commands =
-    pip install --egg http://sourceforge.net/projects/scons/files/latest/download
+    pip install --egg http://sourceforge.net/projects/platformio-storage/files/scons.zip/download
 
 [testenv:docs]
 basepython = python2.7
