Change repo urls to @git

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "smartanthill/cc/embedded"]
 	path = smartanthill/cc/embedded
-	url = https://ivankravets@github.com/smartanthill/smartanthill2_0-embedded.git
+	url = git@github.com:smartanthill/smartanthill2_0-embedded.git
 	branch = develop
 [submodule "smartanthill/dashboard/site"]
 	path = smartanthill/dashboard/site
-	url = https://ivankravets@github.com/smartanthill/smartanthill2_0-dashboard.git
+	url = git@github.com:smartanthill/smartanthill2_0-dashboard.git
 	branch = develop
