--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,3 +1,3 @@
 [settings]
 line_length=79
-known_third_party=twisted,serial,platformio
+known_third_party=twisted,serial,platformio,smartanthill_zc
