--- a/tox.ini
+++ b/tox.ini
@@ -33,6 +33,7 @@ deps =
     isort
     flake8
 commands =
+    pip install -U https://github.com/smartanthill/smartanthill-zepto-compiler
     pip install --egg http://sourceforge.net/projects/platformio-storage/files/scons.zip/download
 
 [testenv:docs]
