--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ smartanthill_zc
 platformio==2.2.0
 twisted==15.2.1
 pyserial==2.7
+txWS==0.9.1
+six==1.9.0 # required by txws but not listed in it's requirements
