--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ deps =
     isort
     flake8
 commands =
-    pip install --egg http://sourceforge.net/projects/platformio-storage/files/scons.zip/download
+    pip install --egg http://dl.platformio.org/scons.zip
 
 [testenv:docs]
 basepython = python2.7
