Skip site's from linting

--- a/tox.ini
+++ b/tox.ini
@@ -51,7 +51,7 @@ deps =
     flake8
     pylint
 commands =
-    flake8 ./smartanthill
+    flake8 ./smartanthill --exclude "site"
     pylint --rcfile=./.pylintrc ./smartanthill
 
 [testenv:coverage]
