Move tests to root directory

--- a/tox.ini
+++ b/tox.ini
@@ -60,7 +60,7 @@ deps =
     coverage
     python-coveralls
 commands =
-    coverage run {envdir}/bin/trial --temp=/tmp/_trial_temp smartanthill
+    coverage run {envdir}/bin/trial --temp=/tmp/_trial_temp tests
     coverage html
     /bin/bash -c "if [[ $CI == 'true' ]]; then coveralls; fi"
 
@@ -71,4 +71,4 @@ basepython =
 commands =
     {envpython} --version
     trial --version
-    trial smartanthill
+    trial tests
