Improve handling of CommStack server

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,3 +5,6 @@ recursive-include smartanthill/cc/embedded/firmware/lib *
 recursive-include smartanthill/cc/embedded/firmware/src *
 
 recursive-include smartanthill/dashboard/site/dist *
+
+recursive-include bin sacommstack
+recursive-exclude bin .sacommstack
