--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,5 +6,6 @@ recursive-include smartanthill/cc/embedded/firmware/src *
 
 recursive-include smartanthill/dashboard/site/dist *
 
-recursive-include bin sacommstack
-recursive-exclude bin .sacommstack
+recursive-include smartanthill/network/bin sacommstack
+recursive-include smartanthill/network/bin sacommstack.exe
+recursive-exclude smartanthill/network/bin .sacommstack
