Use "compiler" setting instead "curl"

--- a/smartanthill/config_base.json
+++ b/smartanthill/config_base.json
@@ -4,7 +4,7 @@
     "level": "INFO"
   },
 
-  "ccurl": "http://cc.smartanthill.org",
+  "compiler": "http://cc.smartanthill.org",
 
   "services":
   {
