Switch to @PlatformIO 2.3

--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,8 @@ deps =
     isort
     flake8
 commands =
-    pip install --egg http://dl.platformio.org/scons.zip
+    python --version
+    twistd --version
 
 [testenv:docs]
 basepython = python2.7
