Call twistd as module

--- a/tox.ini
+++ b/tox.ini
@@ -35,7 +35,7 @@ deps =
     flake8
 commands =
     python --version
-    twistd --version
+    python -m twistd --version
 
 [testenv:docs]
 basepython = python2.7
