Init support for SimpleIoT Mesh

--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@
 # DAMAGE
 
 [tox]
-envlist = py26, py27, docs, lint, coverage
+envlist = py27, docs, lint, coverage
 
 [testenv:develop]
 basepython = python2.7
